--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.ql-container {
+    background: #fff;
+    border-radius: 0 0 4px 4px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.ql-toolbar {
+    background: #E5E6E6;
+    border: 1px solid red;
+    border-radius: 4px 4px 0 0;
+    border-top-left-radius: 0.5em;
+    border-top-right-radius: 0.5em;
+    border-bottom: none;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.ql-editor {
+    min-height: 200px;
+}
+
+.ql-editor::selection {
+    color: #000;
 }
